<resources>
    <string name="app_name" translatable="false">SideKick</string>
    <string name="facebook_application_id" translatable="false">523024471208542</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb523024471208542</string>
    <!-- was "Signing up..." -->
    <string name="fui_progress_dialog_signing_up">Connecting...</string>
    <string name="preference_name" translatable="false">OffsidePlayerPreferences</string>
    <string name="date_format" translatable="false">EEEE, dd/MM/yyyy/hh:mm:ss</string>
    <string name="game_id_key" translatable="false">gameId</string>
    <string name="player_profile_picture_url_key" translatable="false">userProfilePictureUrl</string>
    <string name="recent_token_key" translatable="false">recentToken</string>
    <string name="private_game_id_key" translatable="false">privateGameId</string>
    <string name="rewarded_video_ad_unit_id_key" translatable="false">ca-app-pub-3734756240615742/4334945313</string>
    <string name="key_group_type" translatable="false">groupType</string>
    <string name="key_private_group_name" translatable="false">PRIVATE_GROUP</string>
    <string name="key_public_group_name" translatable="false">PUBLIC_GROUP</string>

    <string name="lbl_you_are_connected">Connected</string>
    <string name="lbl_you_are_disconnected">Disconnected. Trying to reconnect...</string>

    <string name="crash_toast_text">Something went wrong... we are sending the info to the developers...</string>
    <string name="lbl_you_can_earn">Potential earning</string>
    <string name="lbl_correct_answer_feedback">Fantastic!</string>
    <string name="lbl_wrong_answer_feedback">Oops...</string>
    <string name="lbl_you_earned">You earned</string>
    <string name="lbl_points">coins</string>
    <string name="lbl_you_didnt_earn_points">You did not earn coins</string>
    <string name="lbl_balance">Balance</string>
    <string name="lbl_wrong_answer_encourage_feedback">Maybe next time...</string>
    <string name="lbl_create_private_group">CREATE GROUP</string>
    <string name="lbl_type_message">Message group</string>
    <string name="lbl_how_others_answered">Players answers</string>
    <string name="lbl_not_enough_coins_to_play">You need coins in order to play</string>
    <string name="lbl_question_time_expired_message">Time is up for this currentQuestionId</string>
    <string name="lbl_we_have_an_answer">We have an answer</string>
    <string name="lbl_in_few_seconds_you_will_see_others_answers">In few seconds you will see what other thought</string>


    <!--googles test aduinitid-->

    <string name="lbl_you_can_get_coins_doing_one_of_the_following">Get coins</string>
    <string name="lbl_new_question_is_waiting_for_you">New question is waiting for you</string>
    <string name="lbl_click_to_answer">Click to answer</string>
    <string name="lbl_click_to_view">Click to see</string>
    <string name="lbl_watch_short_video">Watch Video</string>
    <string name="lbl_buy_offside_coins">Shop</string>
    <string name="lbl_loading_video">Loading video...</string>
    <string name="lbl_start_slot">Click to roll</string>
    <string name="lbl_back_to_game">BACK TO GAME</string>
    <string name="lbl_well_done_you_earned_1_power_items">Congrats! You won 1 power item</string>
    <string name="lbl_well_done_you_earned_2_power_items">Congrats! You won 2 power items</string>
    <string name="lbl_you_didnt_earn_balls">You did not win any power items, no worries - you can try again</string>
    <string name="lbl_try_again">Try again</string>
    <string name="lbl_you_missed_this_question">You were not connected or you did not answer</string>
    <string name="lbl_feeling_lucky">Feeling Lucky</string>
    <string name="lbl_is">correct answer</string>
    <string name="lbl_your_answer_was">Your answer</string>
    <string name="lbl_and_the_winner_is">And the winners are....</string>
    <string name="lbl_seems_like_you_skipped_this_question">Seems like you skipped this currentQuestionId</string>
    <string name="lbl_you_are_out_of_coins">You do not have enough coins to play, you will get more coins at halftime</string>
    <string name="lbl_game_is_active">GAME IS ON</string>
    <string name="lbl_no_playing_players">No active players</string>
    <string name="lbl_now_playing">playing now</string>
    <string name="lbl_private_groups">groups</string>
    <string name="lbl_my_profile">profile</string>
    <string name="lbl_shop">store</string>
    <string name="lbl_play">play</string>

    <string name="lbl_my_private_groups">My Groups</string>
    <string name="lbl_public_groups">Public Groups</string>
    <string name="key_league_type" translatable="false">leagueType</string>
    <string name="lbl_no_trophies">No Titles</string>
    <string name="lbl_out_of">out of</string>
    <string name="lbl_recent_game_position_title">Rank</string>
    <string name="lbl_recent_game_correct_answers">Correct</string>
    <string name="lbl_recent_game_balance_title">Balance</string>
    <string name="lbl_recent_game_not_found">Recent game not found</string>
    <string name="lbl_primier_league">Premier L</string>
    <string name="lbl_la_liga">La Liga</string>
    <string name="lbl_champions_league">UEFA CL</string>
    <string name="lbl_play_here">PLAY HERE</string>
    <string name="private_group_id_key" translatable="false">privateGroupId</string>
    <string name="lbl_enter_game">ENTER GAME</string>
    <string name="lbl_open_game">OPEN GAME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lbl_sign_out">Logout</string>
    <string name="lbl_no_active_private_game">No active game</string>
    <string name="lbl_news">NEWS</string>
    <string name="lbl_your_position">POSITION:</string>
    <string name="lbl_create_private_group_hint">Give a cool name</string>
    <string name="lbl_delete_private_group">Delete Group</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://www.sidekickgame.com\",\n  }\n}]</string>
    <string name="lbl_resume_game">RESUME</string>
    <string name="lbl_player_experience">My Level</string>
    <string name="lbl_no_group_selected">You did not select a group</string>
    <string name="lbl_doubleup">CLICK TO DOUBLE UP</string>
    <string name="lbl_congratulations">Congratulation!</string>
    <string name="lbl_pre_bonus_reward_message">You have just got yourself</string>
    <string name="lbl_close">CLOSE</string>
    <string name="lbl_latest_game">Latest Game</string>
    <string name="lbl_hounors">Honours</string>
    <string name="lbl_Stats">Stats</string>
    <string name="lbl_matches">Matches</string>
    <string name="lbl_awards">Awards</string>
    <string name="lbl_avg_per_game">Score/Game</string>
    <string name="lbl_leaderboard">Leaderboard</string>
    <string name="lbl_pos">POS</string>
    <string name="lbl_player">PLAYER</string>
    <string name="lbl_games">GAMES</string>
    <string name="lbl_coins_earned">POINTS</string>
    <string name="lbl_are_you_sure_you_want_to_delete">Are you sure you want to delete this group?</string>
    <string name="lbl_all_data_will_be_lost_forever">All data of this group will be lost forever!!!</string>
    <string name="lbl_yes">YES</string>
    <string name="lbl_noooo">NOOOO!!!!</string>
    <string name="lbl_change_private_group_name">Change Group Name</string>
    <string name="lbl_close_camel">Close</string>
    <string name="lbl_player_Successfully_quit_game">You left a game</string>
    <string name="lbl_playe_or_game_not_found">Player or Game not found</string>
    <string name="lbl_collect">COOL!</string>
    <string name="lbl_missing_coins_dialog_title">More coins?</string>
    <string name="lbl_missing_power_items_dialog_title">More power items?</string>
    <string name="lbl_you_can_get">To get more</string>
    <string name="lbl_no_available_games_at_this_time">No scheduled games at this moment</string>
    <string name="lbl_join_private_game_with_code">Join game with code</string>
    <string name="lbl_you_are_about_to_quit_this_game">You are about to quit this game</string>
    <string name="lbl_are_you_sure">Are you sure?</string>
    <string name="lbl_change_name_of_this_group">Change group name</string>
    <string name="lbl_pick_new_name">Pick a new name</string>
    <string name="lbl_set_player_nickname">Change player nickname</string>
    <string name="lbl_pick_you_nickname">Pick your stage name</string>
    <string name="lbl_not_answered">Skipped</string>
    <string name="lbl_to_double_win">click here double bet</string>
    <string name="lbl_use">USE</string>
    <string name="lbl_disclaimer_for_winner">Disclaimer: Announced only if answered at least 50% of questions</string>
    <string name="lbl_question">Question</string>
    <string name="lbl_answer">Answer</string>
    <string name="lbl_bet">Bet</string>
    <string name="lbl_can_earn">Potential Earnings</string>
    <string name="lbl_total_potential_earnings">Total</string>
    <string name="lbl_game_settings">GAME SETTINGS</string>
    <string name="lbl_select_language">Select language</string>
    <string name="lbl_done">DONE</string>
    <string name="lbl_invite">Invite friends</string>
    <string name="lbl_and_get_free_coins">and get free coins</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_walkthrough_groups_desc">Create teams and invite friends to join. Check out for games and where your are ranked among your friends</string>
    <string name="lbl_walkthrough_profile_desc">Check out your profile, latest game results, cups won, level of expertise and in matter of fact how great you are in this game</string>
    <string name="lbl_walkthrough_shop_desc">Buy more coins and power items</string>
    <string name="lbl_walkthrough_play_desc">Join back to the game you are currently playing</string>
    <string name="lbl_walkthrough_groups_title">CONNECT</string>
    <string name="lbl_walkthrguoh_profile_title">YOU</string>
    <string name="lbl_walkthrough_play_title">COMPETE</string>
    <string name="lbl_walkthrough_shop_title">SHOP</string>
    <string name="lbl_next">NEXT</string>
    <string name="lbl_finish">FINISH</string>
    <string name="lbl_back">BACK</string>
    <string name="key_showWalkthrough" translatable="false">showWalkthrough</string>

</resources>
