<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/bg_dialog_get_coins"
    android:padding="12dp"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_you_are_about_to_quit_this_game"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/font_open_sans_hebrew_bold"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/OffsideMediumText"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_are_you_sure"
        android:fontFamily="@font/font_open_sans_hebrew_bold"
        android:textSize="@dimen/OffsideMediumText"
        android:layout_marginTop="15dp"
        android:gravity="center"
        />

    <LinearLayout
      android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start">
            <Button
                android:id="@+id/daq_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:fontFamily="@font/font_open_sans_hebrew"
                android:text="@string/lbl_yes"
                android:background="@drawable/bg_button_dialog"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"

            >
            <Button
                android:id="@+id/daq_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:fontFamily="@font/font_open_sans_hebrew"
                android:text="@string/lbl_noooo"
                android:background="@drawable/bg_button_dialog"
                />


        </LinearLayout>




    </LinearLayout>





</LinearLayout>