<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    android:padding="15dp"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_are_you_sure_you_want_to_delete"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/font_open_sans_hebrew"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/OffsideMediumText"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_all_data_will_be_lost_forever"
        android:layout_gravity="center"
        android:fontFamily="@font/font_open_sans_hebrew"
        android:textSize="@dimen/OffsideMediumText"
        android:layout_marginTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        />

    <LinearLayout
      android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="left">
            <Button
                android:id="@+id/dad_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:fontFamily="@font/font_open_sans_hebrew_extra_bold"
                android:text="@string/lbl_yes"
                android:background="@color/correctAnswerColor"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"

            >
            <Button
                android:id="@+id/dad_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:fontFamily="@font/font_open_sans_hebrew_extra_bold"
                android:text="@string/lbl_noooo"
                android:background="@color/wrongAnswerColor"/>


        </LinearLayout>




    </LinearLayout>





</LinearLayout>