<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/bg_dialog_congrats1"
    android:padding="12dp">

    <TextView
        android:id="@+id/dev_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_game_settings"
        android:fontFamily="@font/font_open_sans_hebrew"
        android:textAllCaps="true"
        android:textSize="@dimen/OffsideMediumText"
        />
    <LinearLayout
        style="@style/LinearLayoutHorizontalWidthMatchHeightWrap"
        android:layoutDirection="locale"
        android:padding="6dp"
        android:layout_marginTop="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="start|center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_select_language"
                android:fontFamily="@font/font_open_sans_hebrew"
                android:textAllCaps="true"
                android:textSize="@dimen/OffsideSmallText"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <RadioButton
                android:id="@+id/dgs_hebrew_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:focusedByDefault="true"
                android:fontFamily="@font/font_open_sans_hebrew"
                android:text="עברית"
                android:textAllCaps="true"
                android:textSize="@dimen/OffsideSmallText" />
            <RadioButton
                android:id="@+id/dgs_english_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_open_sans_hebrew"
                android:textAllCaps="true"
                android:textSize="@dimen/OffsideSmallText"
                android:text="English" />

        </LinearLayout>




    </LinearLayout>






    <LinearLayout
      android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/dgs_done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:fontFamily="@font/font_open_sans_hebrew"
                android:text="@string/lbl_done"
                android:background="@drawable/bg_button_dialog"
                />
        </LinearLayout>
        <!--<LinearLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="end"-->

            <!--&gt;-->
            <!--<Button-->
                <!--android:id="@+id/dad_cancel_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--style="@style/Button"-->
                <!--android:fontFamily="@font/font_open_sans_hebrew"-->
                <!--android:text="@string/lbl_noooo"-->
                <!--android:background="@drawable/bg_button_dialog"-->
                <!--/>-->


        <!--</LinearLayout>-->




    </LinearLayout>





</LinearLayout>